Moved ULN Model Project to Correct Location, added Nuspec file

--- a/src/ESFA.DC.Data.ULN.Model/ESFA.DC.Data.ULN.Model.csproj
+++ b/src/ESFA.DC.Data.ULN.Model/ESFA.DC.Data.ULN.Model.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
+    <None Include="ESFA.DC.Data.ULN.Model.nuspec" />
     <None Include="packages.config" />
     <None Include="ULN.edmx.diagram">
       <DependentUpon>ULN.edmx</DependentUpon>
