ULN Constructor added to allow connection string to be passed in to Context Constructor

--- a/src/ESFA.DC.Data.ULN.Model/ESFA.DC.Data.ULN.Model.csproj
+++ b/src/ESFA.DC.Data.ULN.Model/ESFA.DC.Data.ULN.Model.csproj
@@ -66,6 +66,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ULN.edmx</DependentUpon>
     </Compile>
+    <Compile Include="ULNConstructor.cs" />
     <Compile Include="UniqueLearnerNumber.cs">
       <DependentUpon>ULN.tt</DependentUpon>
     </Compile>
